[package]
name = "swarus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.18"
aws-sdk-s3 = "1.78.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }